ui/app/components/app/signature-request/signature-request-message/index.scss
.signature-request-message {
  flex: 1 60%;
  display: flex;
  flex-direction: column;

  &__title {
    @include H6;

    font-weight: 500;
    color: #636778;
    margin-left: 12px;
  }

  h2 {
    @include H6;

    flex: 1 1 0;
    text-align: left;
    border-bottom: 1px solid #d2d8dd;
    padding: 0.5rem;
    margin: 0;
    color: #ccc;
  }

  &--root {
    flex: 1 100%;
    background-color: #f8f9fb;
    padding-bottom: 0.5rem;
    overflow: auto;
    padding-left: 12px;
    padding-right: 12px;
    width: 360px;

    @media screen and (min-width: 576px) {
      width: auto;
    }
  }

  &__type-title {
    @include H6;

    margin-left: 12px;
    margin-top: 6px;
    margin-bottom: 10px;
  }

  &--node,
  &--node-leaf {
    padding-left: 0.8rem;

    &-label {
      color: #5b5d67;
    }

    &-value {
      color: black;
      margin-left: 0.5rem;
      text-overflow: ellipsis;
      white-space: nowrap;
      overflow: hidden;
    }
  }

  &--node-leaf {
    display: flex;
  }
}

